--- a/src/app/main/main.component.css
+++ b/src/app/main/main.component.css
@@ -9,13 +9,16 @@
 
 }
 
-
 .card{
   margin: 1%;
-
+  background: rgb(250,250,250);
+  box-shadow: 2px 4px rgb(200,200,200);
 }
 
-
+.card-title{
+  font-size:1.6rem;
+  font-weight:500;
+}
 
 .searchform{
   margin: auto;
@@ -32,8 +35,32 @@
 
 .filterbar{
   padding-top: 40px;
+  justify-content: space-between;
 }
 
 .filterselect{
   margin-right: 25px;
+  min-width: 200px;
+}
+
+.pagecontrol{
+  justify-content: center;
+}
+.pagecontrol ::ng-deep .ngx-pagination{
+    padding-inline-start: 0;
+    
+  }
+
+.perpageselect{
+  width: 64px;
+  height: 26px;
+  padding-top: 0px;
+  padding-bottom: 0px;
+  font-size: .8rem;
+}
+
+.colcountbutton{
+  height: 20px;
+  width: 20px;
+  margin: 2px;
 }
